--- a/output/frontend/src/app/pages/login/login.component.scss
+++ b/output/frontend/src/app/pages/login/login.component.scss
@@ -2,7 +2,7 @@
   &-container {
     width: 100vw;
     height: 100vh;
-    background: url('/assets/dark-material-bg.jpg') no-repeat;
+    /* background: url('/assets/dark-material-bg.jpg') no-repeat; */
     Display: flex;
     justify-content: center;
     align-items: center;
