--- a/output/frontend/src/app/erp/produto/produto.component.html
+++ b/output/frontend/src/app/erp/produto/produto.component.html
@@ -11,37 +11,37 @@
     <!--- Note that these columns can be defined in any order.
           The actual rendered columns are set as a property on the row definition" -->
 
-    <!-- ID Column -->
-    <ng-container matColumnDef="id">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Id</mat-header-cell>
-      <mat-cell *matCellDef="let row" >{{row.id}}</mat-cell>
-    </ng-container>
-
+      <!-- ID Column -->
     <ng-container matColumnDef="nome">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Nome</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.nome}}</mat-cell>
+      <mat-cell *matCellDef="let row" >{{row.nome}}</mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="state">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Endereço</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.endereco}}</mat-cell>
+    <!-- ID Column -->
+    <ng-container matColumnDef="email">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>e-mail</mat-header-cell>
+      <mat-cell *matCellDef="let row" >{{row.email}}</mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="cidade">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Cidade</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.cidade}}</mat-cell>
-    </ng-container>
-
+    <!-- ID Column -->
     <ng-container matColumnDef="telefone">
       <mat-header-cell *matHeaderCellDef mat-sort-header>Telefone</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.telefone}}</mat-cell>
+      <mat-cell *matCellDef="let row" >{{row.telefone}}</mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="email">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Email</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.email}}</mat-cell>
+    <!-- ID Column -->
+    <ng-container matColumnDef="situacao">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Situacao</mat-header-cell>
+      <mat-cell *matCellDef="let row" >{{row.situacao}}</mat-cell>
     </ng-container>
-
+    <!-- ID Column -->
+    <ng-container matColumnDef="situacaoToString">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Situacao</mat-header-cell>
+      <mat-cell *matCellDef="let row" >{{row.situacaoToString}}</mat-cell>
+    </ng-container>
+    <!-- ID Column -->
+    <ng-container matColumnDef="registerDate">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Data Registro</mat-header-cell>
+      <mat-cell *matCellDef="let row" >{{row.registerDate}}</mat-cell>
+    </ng-container>
+  
     <!-- actions -->
     <ng-container matColumnDef="actions">
       <mat-header-cell *matHeaderCellDef>
