--- a/output/frontend/src/app/pages/sidenav/sidenav.component.html
+++ b/output/frontend/src/app/pages/sidenav/sidenav.component.html
@@ -8,12 +8,15 @@
     [opened]="!(isHandset | async)!.matches">
 
     <mat-toolbar color="primary" class="mat-elevation-z6" style="height:56px;"  >
-      <img src="./../../../assets/images/logo.svg" style="width: 32px;" /> NgERP
+      <img src="./../../../assets/images/logo.svg" style="width: 32px;" /> NgBuilder
     </mat-toolbar>
 
     <mat-nav-list>
-            <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/cliente']"  >Cad.Clientes</a>
-        <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/produto']"  >Cad.Produtos</a>
+            <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/projeto']"  >Projetos</a>
+        <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/artefato']"  >Artefatos</a>
+        <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/elemento']"  >Elementos</a>
+        <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/configuracao']"  >Configuração</a>
+        <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/buildapp']"  >Gerar App!</a>
         <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/sobre']" >Sobre</a>
         <a mat-list-item  (click)="logout()" >Logout</a>
     </mat-nav-list>
