Preparação para geração do frontend.

--- a/output/frontend/src/app/pages/sidenav/sidenav.component.html
+++ b/output/frontend/src/app/pages/sidenav/sidenav.component.html
@@ -16,6 +16,7 @@
         <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/artefato']"  >Artefatos</a>
         <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/elemento']"  >Elementos</a>
         <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/configuracao']"  >Configuração</a>
+        <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/formly']"  >formly-js.github.io</a>
         <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/buildapp']"  >Gerar App!</a>
         <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/sobre']" >Sobre</a>
         <a mat-list-item  (click)="logout()" >Logout</a>
