--- a/output/frontend/src/app/pages/sidenav/sidenav.component.html
+++ b/output/frontend/src/app/pages/sidenav/sidenav.component.html
@@ -12,13 +12,13 @@
     </mat-toolbar>
 
     <mat-nav-list>
-            <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/projeto']"  >Projetos</a>
-        <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/artefato']"  >Artefatos</a>
-        <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/elemento']"  >Elementos</a>
-        <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/configuracao']"  >Configuração</a>
-        <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/formly']"  >formly-js.github.io</a>
-        <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/buildapp']"  >Gerar App!</a>
-        <a mat-list-item  (click)="sidenav.toggle()" [routerLink]="['/sobre']" >Sobre</a>
+            <a mat-list-item  (click)="toggle()" [routerLink]="['/projeto']"  >Projetos</a>
+        <a mat-list-item  (click)="toggle()" [routerLink]="['/artefato']"  >Artefatos</a>
+        <a mat-list-item  (click)="toggle()" [routerLink]="['/elemento']"  >Elementos</a>
+        <a mat-list-item  (click)="toggle()" [routerLink]="['/configuracao']"  >Configuração</a>
+        <a mat-list-item  (click)="toggle()" [routerLink]="['/formly']"  >formly-js.github.io</a>
+        <a mat-list-item  (click)="toggle()" [routerLink]="['/buildapp']"  >Gerar App!</a>
+        <a mat-list-item  (click)="toggle()" [routerLink]="['/sobre']" >Sobre</a>
         <a mat-list-item  (click)="logout()" >Logout</a>
     </mat-nav-list>
   </mat-sidenav>
