--- a/templates/frontend/src/app/pages/home/home.component.html
+++ b/templates/frontend/src/app/pages/home/home.component.html
@@ -1,1 +1,13 @@
-<p>Home</p>
+<div fxLayout="row wrap" class="form-group">
+    <div fxFlex.gt-sm="100" class="divide">
+      <mat-card>
+        <mat-card-title>Home</mat-card-title>
+        <mat-card-content>
+
+        ngx-bulider v 0.0.1   
+
+        </mat-card-content>
+</mat-card>
+</div>
+</div>
+  
