--- a/templates/frontend/src/app/pages/login/login.component.html
+++ b/templates/frontend/src/app/pages/login/login.component.html
@@ -3,7 +3,7 @@
   <div class="signin-content mat-elevation-z12">
 
       <div fxLayoutAlign="center center">
-          <img src="assets/images/logo.svg" style="width: 84px; padding: 0px 0 0px;">
+          <img src="assets/images/logo.svg" style="width: 64px; padding: 0px 0 0px;">
      </div>
 
 
@@ -25,48 +25,10 @@
         </div>
 
         <mat-card-actions>
-          <button mat-raised-button (click)="login()" color="primary">Login</button>
+          <button mat-raised-button style="width: 300px"  (click)="login()" color="primary">Login</button>
         </mat-card-actions>
-
       </div>
 
     </form>
-
-      <div class="other-sign">
-          Outras Formas de Login
-      </div>
-
-      <button class="mat-raised-button capsule-button google-button m-b-10" (click)="signInWithGoogle()">
-        <span class="capsule-button-wrapper">
-          <div class="capsule-button-icon">
-            <img src="assets/icon/google-plus.svg">
-          </div>
-          <span class="capsule-button-text">Google</span>
-        </span>
-      </button>
-
-      <button class="mat-raised-button capsule-button github-button m-b-10" (click)="signInWithGithub()">
-        <span class="capsule-button-wrapper">
-          <div class="capsule-button-icon">
-            <img src="assets/icon/github-logo.svg">
-          </div>
-          <span class="capsule-button-text">Github</span>
-        </span>
-      </button>
-
-      <button class="mat-raised-button capsule-button facebook-button m-b-15">
-        <span class="capsule-button-wrapper">
-          <div class="capsule-button-icon">
-            <img src="assets/icon/facebook.svg">
-          </div>
-          <span class="capsule-button-text">Facebook</span>
-        </span>
-      </button>
-
-      <a class="redirect" [routerLink]="['/login']">Ainda não tem registro? Registre-se aqui.</a>
-
     </div>
   </div>
-
-
-
