--- a/templates/frontend/src/app/pages/home/home.component.html
+++ b/templates/frontend/src/app/pages/home/home.component.html
@@ -1,13 +1,15 @@
-<div fxLayout="row wrap" class="form-group">
-    <div fxFlex.gt-sm="100" class="divide">
+<div fxLayout="row" fxLayoutWrap>
+  <div *ngFor="let dash of dashCard" fxFlex.lt-sm="100" fxFlex.sm="100" fxFlex.md="100">
+
       <mat-card>
-        <mat-card-title>Home</mat-card-title>
-        <mat-card-content>
+          <mat-card-title>{{dash.title}}</mat-card-title>
+          <mat-card-content>
 
-        ngx-bulider v 0.0.1   
+      <app-dashcard [dashData]="dash"></app-dashcard>
 
-        </mat-card-content>
-</mat-card>
+
+    </mat-card-content>
+  </mat-card>
+
+  </div>
 </div>
-</div>
-  
