Ignore.Ajustes diversos.

--- a/templates/frontend/src/app/pages/home/home.component.html
+++ b/templates/frontend/src/app/pages/home/home.component.html
@@ -1,4 +1,5 @@
-<div fxLayout="row" fxLayoutWrap>
+<div fxLayout="row wrap" fxLayout.xs="column"  fxLayoutGap  >
+
   <div *ngFor="let dash of dashCard" fxFlex.lt-sm="100" fxFlex.sm="100" fxFlex.md="100">
 
       <mat-card>
