Ajustes diversos. Teste de protótipo para o ngx-builder.

--- a/templates/frontend/src/app/pages/login/login.component.html
+++ b/templates/frontend/src/app/pages/login/login.component.html
@@ -6,17 +6,16 @@
           <img src="assets/images/logo.svg" style="width: 64px; padding: 0px 0 0px;">
      </div>
 
-
-    <form (ngSubmit)="login()">
+    <form *ngIf="!submitted" [formGroup]="form" (ngSubmit)="login()" #loginForm="ngForm" >
 
         <div class="register-content" fxLayout="column" fxLayoutAlign="start stretch">
 
             <mat-form-field class="display-block">
-            <input matInput placeholder="Username" [(ngModel)]="username" name="username" required>
+            <input matInput placeholder="Username" formControlName="username" name="username" required>
             </mat-form-field>
 
             <mat-form-field class="display-block">
-          <input matInput placeholder="Password" [(ngModel)]="password"type="password" name="password" required>
+          <input matInput placeholder="Password" formControlName="password" type="password" name="password" required>
         </mat-form-field>
 
         <div class="m-b-15" fxLayout="row" fxLayoutAlign="center center">
@@ -25,7 +24,7 @@
         </div>
 
         <mat-card-actions>
-          <button mat-raised-button style="width: 300px"  (click)="login()" color="primary">Login</button>
+          <button mat-raised-button color="primary"  style="width: 300px"  [disabled]="!loginForm.form.valid"  (click)="login()" color="primary">Login</button>
         </mat-card-actions>
       </div>
 
