--- a/output/frontend/src/app/infra/users/user-grid.component.html
+++ b/output/frontend/src/app/infra/users/user-grid.component.html
@@ -3,7 +3,7 @@
 <div fxLayout="row wrap" class="form-group">
   <div fxFlex.gt-sm="100" class="divide">
     <mat-card>
-      <mat-card-title>Configuração</mat-card-title>
+      <mat-card-title>Users</mat-card-title>
 
       <a mat-fab color="accent" routerLink="/configuracao/add" >
         <mat-icon>add</mat-icon>
@@ -18,6 +18,7 @@
       </a>
             
     <mat-card-content>
+      
     <div class="table-header">
         <mat-form-field>
           <input matInput (keyup)="applyFilter($event.target.value)" placeholder="Filter">
@@ -28,7 +29,7 @@
 
 	    <!-- ID Column -->
 	    <ng-container matColumnDef="nome">
-	      <mat-header-cell *matHeaderCellDef mat-sort-header>Nome Empresa</mat-header-cell>
+	      <mat-header-cell *matHeaderCellDef mat-sort-header>Nome</mat-header-cell>
 	      <mat-cell *matCellDef="let row" >{{row.nome}}</mat-cell>
 	    </ng-container>
   
