--- a/output/frontend/src/app/pages/sidenav/sidenav.component.html
+++ b/output/frontend/src/app/pages/sidenav/sidenav.component.html
@@ -17,7 +17,7 @@
         <a mat-list-item  (click)="toggle()" [routerLink]="['/projeto']"  >Projetos</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/artefato']"  >Artefatos</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/elemento']"  >Elementos</a>
-        <a mat-list-item  (click)="toggle()" [routerLink]="['/user']"  >Users</a>
+        <a mat-list-item  (click)="toggle()" [routerLink]="['/user']"  >Usuários</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/configuracao']"  >Configuração</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/buildapp']"  >Gerar App!</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/sobre']" >Sobre</a>
