--- a/output/frontend/src/app/infra/users/user-form.component.html
+++ b/output/frontend/src/app/infra/users/user-form.component.html
@@ -3,7 +3,7 @@
       <mat-card>
         
         <mat-card-title>{{title}}</mat-card-title>
-        <a mat-fab color="accent"  routerLink="/configuracao" >
+        <a mat-fab color="accent"  routerLink="/user" >
           <mat-icon>chevron_left</mat-icon>
         </a>
         
