--- a/output/frontend/src/styles.css
+++ b/output/frontend/src/styles.css
@@ -1,4 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+/* deeppurple-amber.css  indigo-pink.css
+
+deeppurple-amber.css
+indigo-pink.css
+pink-bluegrey.css
+purple-green.css
+*/
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 
