--- a/output/frontend/src/styles.css
+++ b/output/frontend/src/styles.css
@@ -2,12 +2,12 @@
 
 /* deeppurple-amber.css  indigo-pink.css
 
-deeppurple-amber.css
+edeppurple-amber.css
 indigo-pink.css
 pink-bluegrey.css
 purple-green.css
 */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+@import "~@angular/material/prebuilt-themes/pink-bluegrey.css";
 
 
 body{
