--- a/output/frontend/src/app/erp/elemento/elemento-form.component.html
+++ b/output/frontend/src/app/erp/elemento/elemento-form.component.html
@@ -3,7 +3,7 @@
       <mat-card>
         
         <mat-card-title>{{title}}</mat-card-title>
-        <a mat-fab color="accent"  routerLink="/elemento" >
+        <a mat-raised-button color="accent"  routerLink="/elemento" >
           <mat-icon>chevron_left</mat-icon>
         </a>
         
