--- a/output/frontend/src/app/erp/elemento/elemento-grid.component.html
+++ b/output/frontend/src/app/erp/elemento/elemento-grid.component.html
@@ -5,15 +5,15 @@
     <mat-card>
       <mat-card-title>Elementos</mat-card-title>
 
-      <a mat-fab color="accent" routerLink="/elemento/add" >
+      <a mat-raised-button color="accent" routerLink="/elemento/add" >
         <mat-icon>add</mat-icon>
       </a>
       
-      <a mat-fab color="accent" (click)="print()" > 
+      <a mat-raised-button color="accent" (click)="print()" > 
         <mat-icon>print</mat-icon>
       </a>
       
-      <a mat-fab color="accent" (click)="screenshot()" > 
+      <a mat-raised-button color="accent" (click)="screenshot()" > 
         <mat-icon>photo_camera</mat-icon>
       </a>
             
