Ajustes diversos. Teste de protótipo para o ngx-builder.

--- a/output/frontend/src/app/infra/users/user-grid.component.html
+++ b/output/frontend/src/app/infra/users/user-grid.component.html
@@ -29,7 +29,7 @@
 
 	    <!-- ID Column -->
 	    <ng-container matColumnDef="username">
-	      <mat-header-cell *matHeaderCellDef mat-sort-header>Nome</mat-header-cell>
+	      <mat-header-cell *matHeaderCellDef mat-sort-header>Login</mat-header-cell>
 	      <mat-cell *matCellDef="let row" >{{row.username}}</mat-cell>
 	    </ng-container>
 
