--- a/output/frontend/src/app/infra/users/user-upload.component.html
+++ b/output/frontend/src/app/infra/users/user-upload.component.html
@@ -9,20 +9,14 @@
         
         <mat-card-content>
 
-        <form [formGroup]="form" (ngSubmit)="onSubmit(model)" >
-          <formly-form
-            [form]="form"
-            [options]="options"
-            [fields]="fields"
-            [model]="model">
+            <br/>
+            <h2>Fazer upload foto do usuário:</h2>
 
             <app-file-upload [text]="labelUploadButtom"  [target]="target" (complete)="onFileComplete($event)"></app-file-upload> 
 
-            <button mat-raised-button color="primary"  type="submit">Salvar</button>
-            <button mat-raised-button (click)="options.resetModel()">Limpar</button>
-          </formly-form>
-        </form>
-  </mat-card-content>
-  </mat-card>
-  </div>
+
+        </mat-card-content>
+
+      </mat-card>
+      </div>
   </div>
