--- a/output/frontend/src/app/infra/users/user-grid.component.css
+++ b/output/frontend/src/app/infra/users/user-grid.component.css
@@ -1,3 +1,9 @@
+img {
+  border-radius: 50%;
+  height: 80px;
+  padding-right: 10px;
+}
+
 .header {
     display: flex;
     margin-bottom: 1.5rem;
