--- a/output/frontend/src/app/infra/users/user-grid.component.css
+++ b/output/frontend/src/app/infra/users/user-grid.component.css
@@ -38,5 +38,6 @@ img {
   }
   
   mat-row:hover {
-    background-color:  #f5f5f5;
+    /* background-color:  #f5f5f5; */
+    background-color:rgba(245, 245, 248, 0.2) ;
   }
