--- a/output/frontend/src/app/pages/sidenav/sidenav.component.html
+++ b/output/frontend/src/app/pages/sidenav/sidenav.component.html
@@ -1,4 +1,4 @@
-<mat-sidenav-container class="sidenav-container" >
+<mat-sidenav-container  [class.dark-theme]="isToggledTheme">
   <mat-sidenav
     #sidenav
     class="sidenav"
@@ -21,6 +21,7 @@
         <a mat-list-item  (click)="toggle()" [routerLink]="['/buildapp']"  >Gerar App!</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/user']"  >Usuários</a>	
         <a mat-list-item  (click)="toggle()" [routerLink]="['/sobre']" >Sobre</a>
+        <a mat-list-item  (click)="theme()" >Tema</a>
         <a mat-list-item  (click)="logout()" >Logout</a>
     </mat-nav-list>
   </mat-sidenav>
@@ -35,9 +36,11 @@
        >
        <!-- PQ *ngIf="(isHandset | async)!.matches" -->
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
-      </button>
+     </button>
 
+  
     </mat-toolbar>
+
 
     <div class="inner-sidenav-content">
       <router-outlet></router-outlet>
