--- a/output/frontend/src/app/pages/sidenav/sidenav.component.html
+++ b/output/frontend/src/app/pages/sidenav/sidenav.component.html
@@ -19,7 +19,7 @@
         <a mat-list-item  (click)="toggle()" [routerLink]="['/elemento']"  >Elementos</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/configuracao']"  >Configuração</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/buildapp']"  >Gerar App!</a>
-        <a mat-list-item  (click)="toggle()" [routerLink]="['/user']"  >Usuários</a>	
+        <a mat-list-item  (click)="toggle()" [routerLink]="['/user']" *ngIf="isAdmin()"    >Usuários</a>	
         <a mat-list-item  (click)="toggle()" [routerLink]="['/sobre']" >Sobre</a>
         <a mat-list-item  (click)="theme()" >Tema</a>
         <a mat-list-item  (click)="logout()" >Logout</a>
