--- a/templates/frontend/src/app/infra/users/user-grid.component.css
+++ b/templates/frontend/src/app/infra/users/user-grid.component.css
@@ -1,7 +1,6 @@
 img {
   border-radius: 50%;
-  height: 80px;
-  padding-right: 10px;
+  height: 64px;
 }
 
 .header {
@@ -39,5 +38,6 @@ img {
   }
   
   mat-row:hover {
-    background-color:  #f5f5f5;
+    /* background-color:  #f5f5f5; */
+    background-color:rgba(245, 245, 248, 0.2) ;
   }
