Atualizado README.testing template backend nestjs.Ignore.Adicionado logger.Refatorado GenerationHelper.Ajustes diversos. Teste de protótipo para o ngx-builder.Readme.Ajustes diversos. Teste de protótipo para o ngx-builder.

--- a/output/frontend/src/app/pages/sidenav/sidenav.component.html
+++ b/output/frontend/src/app/pages/sidenav/sidenav.component.html
@@ -8,7 +8,12 @@
     [opened]="!(isHandset | async)!.matches">
 
     <mat-toolbar color="primary" class="mat-elevation-z6" style="height:56px;"  >
-      <img src="./../../../assets/images/logo.svg" style="width: 32px;" /> ngx-builder
+
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="sidenav.toggle()" >
+        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
+      </button>
+      <img src="./../../../assets/images/logo.svg" style="width: 20px; padding-right: 5px" /> ngx-builder
+
     </mat-toolbar>
 
     <mat-nav-list>
@@ -28,12 +33,8 @@
 
   <mat-sidenav-content  >
     <mat-toolbar color="primary" class="fixed-header mat-elevation-z6" style="height:56px;" >
-      <button
-        type="button"
-        aria-label="Toggle sidenav"
-        mat-icon-button
-        (click)="sidenav.toggle()"
-       >
+
+      <button type="button" aria-label="Toggle sidenav" mat-icon-button (click)="sidenav.toggle()">
        <!-- PQ *ngIf="(isHandset | async)!.matches" -->
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
