--- a/templates/frontend/src/app/infra/users/user-form.component.html
+++ b/templates/frontend/src/app/infra/users/user-form.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row wrap" class="form-group">
-    <div fxFlex.gt-sm="100" class="divide">
+    <div fxFlex.gt-sm="100">
       <mat-card fxFlex.gt-sm="50" >
         
         <mat-card-title>{{title}}</mat-card-title>
