--- a/templates/frontend/src/app/infra/users/user-grid.component.html
+++ b/templates/frontend/src/app/infra/users/user-grid.component.html
@@ -1,7 +1,7 @@
 <div id="convert"> 
 
 <div fxLayout="row wrap" class="form-group">
-  <div fxFlex.gt-sm="100" class="divide">
+  <div fxFlex.gt-sm="100">
     <mat-card>
       <mat-card-title>Usuários</mat-card-title>
 
@@ -74,16 +74,26 @@
       <mat-header-cell *matHeaderCellDef >Actions</mat-header-cell>
       <mat-cell *matCellDef="let row"  >
  
-        <button mat-mini-fab color="primary"routerLink="/user/foto/{{row.id}}">
-          <mat-icon aria-label="Edit">photo_camera</mat-icon>
-        </button>
-        <button mat-mini-fab color="primary"routerLink="/user/edit/{{row.id}}">
-          <mat-icon aria-label="Edit">edit</mat-icon>
-        </button>
-        <button  mat-mini-fab   (click)="deleteItem(row)">
-          <mat-icon aria-label="Delete">delete</mat-icon>
-        </button>
-
+           
+		<button mat-icon-button [matMenuTriggerFor]="moreMenu" aria-label="More"
+					(click)="$event.stopPropagation();">
+		<mat-icon class="secondary-text">more_vert</mat-icon> 
+		</button>
+		<mat-menu #moreMenu="matMenu">
+	        <button mat-menu-item aria-label="edit" routerLink="/user/foto/{{row.id}}">
+	          <mat-icon>photo_camera</mat-icon>
+	          <span>Foto</span>
+	        </button>
+			<button mat-menu-item aria-label="edit" routerLink="/user/foto/{{row.id}}">
+				<mat-icon>edit</mat-icon>
+				<span>Editar</span>
+			</button>
+			<button mat-menu-item aria-label="remove" (click)="deleteItem(row)">
+				<mat-icon>delete</mat-icon>
+			  	<span>Remover</span>
+			</button>
+ 	 	</mat-menu>   
+   
       </mat-cell>
     </ng-container> 
 
