--- a/output/frontend/src/app/pages/sidenav/sidenav.component.html
+++ b/output/frontend/src/app/pages/sidenav/sidenav.component.html
@@ -25,6 +25,7 @@
         <a mat-list-item  (click)="toggle()" [routerLink]="['/configuracao']" >Configuração</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/buildapp']" >Gerar App!</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/user']" *ngIf="isAdmin()" >Usuários</a>
+        <a mat-list-item  (click)="toggle()" [routerLink]="['/profile']" >Meu Perfil</a>
         <a mat-list-item  (click)="theme()" >Tema</a>
         <a mat-list-item  (click)="toggle()" [routerLink]="['/sobre']" >Sobre</a>
         <a mat-list-item  (click)="logout()" >Logout</a>
