--- a/output/frontend/src/app/pages/erro/erro.component.html
+++ b/output/frontend/src/app/pages/erro/erro.component.html
@@ -1,3 +1,11 @@
-<p>
-  erro works!
-</p>
+<div fxLayout="row wrap" class="form-group">
+    <div fxFlex.lt-sm="100" >
+      <mat-card>
+        <mat-card-title>Erro</mat-card-title>
+        <mat-card-content>
+
+        </mat-card-content>
+</mat-card>
+</div>
+</div>
+  
