--- a/output/frontend/src/app/infra/users/user-grid.component.css
+++ b/output/frontend/src/app/infra/users/user-grid.component.css
@@ -20,7 +20,8 @@ img {
     min-height: 64px;
     padding: 8px 24px 0;
     /* background-color: #ededed; */
-    background-color:rgba(245, 245, 248, 0.521) ;
+    /* background-color: #f5f5f5; */
+    background-color:rgba(245, 245, 248, 0.1) ;
   }
 
 
