--- a/output/frontend/src/app/pages/sidenav/sidenav.component.html
+++ b/output/frontend/src/app/pages/sidenav/sidenav.component.html
@@ -43,6 +43,8 @@
        <!-- PQ *ngIf="(isHandset | async)!.matches" -->
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
+      <img src="./../../../assets/images/logo.svg" style="width: 20px; padding-right: 5px" /> ngx-builder
+
 
     </mat-toolbar>
 
