--- a/templates/frontend/src/app/infra/users/user-grid.component.html
+++ b/templates/frontend/src/app/infra/users/user-grid.component.html
@@ -84,7 +84,7 @@
 	          <mat-icon>photo_camera</mat-icon>
 	          <span>Foto</span>
 	        </button>
-			<button mat-menu-item aria-label="edit" routerLink="/user/foto/{{row.id}}">
+			<button mat-menu-item aria-label="edit" routerLink="/user/edit/{{row.id}}">
 				<mat-icon>edit</mat-icon>
 				<span>Editar</span>
 			</button>
