Atualizados scripts de migração.

--- a/output/frontend/src/app/erp/projeto/projeto-grid.component.html
+++ b/output/frontend/src/app/erp/projeto/projeto-grid.component.html
@@ -73,9 +73,9 @@
 	      <mat-cell *matCellDef="let row" >{{row.serverLang}}</mat-cell>
 	    </ng-container>
 	    <!-- ID Column -->
-	    <ng-container matColumnDef="databseFlavor">
+	    <ng-container matColumnDef="databaseFlavor">
 	      <mat-header-cell *matHeaderCellDef mat-sort-header>Database</mat-header-cell>
-	      <mat-cell *matCellDef="let row" >{{row.databseFlavor}}</mat-cell>
+	      <mat-cell *matCellDef="let row" >{{row.databaseFlavor}}</mat-cell>
 	    </ng-container>
 	    <!-- ID Column -->
 	    <ng-container matColumnDef="serverHost">
